<resources>
    <string name="app_name">TaskReminder</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="connectionstatus">"Connection status: "</string>
    <string name="connected">"Connected "</string>
    <string name="disconnected">"Disconnected "</string>

    <!-- Logowanie i rejestracja-->
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>
    <string name="toast_register_enter_details">Please enter your details!</string>
    <string name="toast_register_succesfull">User successfully registered. Try login now!</string>
    <string name="registering">Registering ...</string>
    <string name="logging">Logging in ...</string>
    <string name="toast_logging_bad_creditionals">Please enter the credentials!</string>
    <!-- Dodawanie i wyswietlanie-->
    <string name="btn_add">Add task</string>
    <string name="btn_show">Show my tasks</string>
    <string name="task_name">Title of task</string>
    <string name="select_date">select date</string>
    <string name="select_time">select time</string>
    <string name="date">date</string>
    <string name="time">time</string>
    <string name="add_task">Add task</string>
    <string name="info">Here you can add new task!</string>

</resources>

