<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:id="@+id/activity_add"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:background="@color/bg_add"
    android:orientation="vertical"
    android:padding="10dp" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"

        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:id="@+id/info"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:autoText="false"
            android:capitalize="characters"
            android:clickable="false"
            android:fontFamily="casual"
            android:hint="@string/info"
            android:padding="10dp"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColorHint="@color/input_register"
            android:textColorLink="#8b8b8b"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/taskname"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/input_add"
            android:hint="@string/task_name"
            android:inputType="textCapWords"
            android:padding="10dp"
            android:singleLine="true"
            android:textAlignment="viewStart"
            android:textColor="@color/bg_add"
            android:textColorHint="@color/bg_add"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/date"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/input_add"
            android:hint="@string/date"
            android:inputType="date"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/bg_add"
            android:textColorHint="@color/bg_add"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btndate"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:layout_marginTop="10dip"
            android:background="@color/color_add"
            android:text="@string/select_date"
            android:textColor="@color/white" />


        <TextView
            android:id="@+id/time"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/input_add"
            android:cursorVisible="false"
            android:hint="@string/time"
            android:inputType="time"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/bg_add"
            android:textColorHint="@color/bg_add"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btntime"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:layout_marginTop="10dip"
            android:background="@color/color_add"
            android:text="@string/select_time"
            android:textColor="@color/white" />

        <!-- Login Button -->

        <Button
            android:id="@+id/btnAddTask"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dip"
            android:background="#587498"
            android:text="@string/add_task"
            android:textColor="@color/white" />

        <!-- Link to Login Screen -->

    </LinearLayout>

</LinearLayout>
