<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg_register"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context="com.example.wojtek.taskreminder.activity.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/welcome"
            android:textAlignment="center"
            android:textColor="@color/btn_login_bg"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textAlignment="center"
            android:textColor="@color/btn_login_bg"
            android:textSize="24dp" />

        <TextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="200dp"
            android:textAlignment="center"
            android:textColor="@color/btn_login_bg"
            android:textSize="13dp" />

        <Button
            android:id="@+id/btnShow"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="#ea4c88"
            android:padding="10dp"
            android:text="@string/btn_show"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="#ea4c88"
            android:padding="10dp"
            android:text="@string/btn_add"
            android:textColor="@color/white" />
        <Button
            android:id="@+id/btnLogout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="#ea4c88"
            android:padding="10dp"
            android:text="@string/btn_logout"
            android:textColor="@color/white" />



        <!-- Login Button -->

        <!-- Link to Login Screen -->

    </LinearLayout>

</LinearLayout>
